--- a/src/ProwlFinder.css
+++ b/src/ProwlFinder.css
@@ -1,5 +1,35 @@
 .google-map {
   position: absolute;
   width: 100%;
+  height: calc(100% - 60px);
+  top: 60px;
+  left: 0;
+}
+
+.brand-logo {
+  width: 40px;
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.header {
+  position: relative;
+  font-size: 2rem;
+}
+
+.header span {
+  margin-left: 60px;
+  line-height: 60px;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.9);
+  z-index: 2;
+  width: 450px;
   height: 100%;
 }
