--- a/src/ProwlFinder.css
+++ b/src/ProwlFinder.css
@@ -35,6 +35,12 @@
   height: 100%;
 }
 
+@media (max-width: 768px) {
+  .sidebar {
+    width: 300px;
+  }
+}
+
 .close-sidebar {
   position: absolute;
   top: 20px;
@@ -48,7 +54,7 @@
 .sidebar-list {
   margin: 0;
   padding: 0;
-  margin-top: 70px;
+  margin-top: 20px;
 }
 
 .sidebar-list li {
@@ -69,4 +75,15 @@
 
 .text-bold {
   font-weight: bold;
+}
+
+.search-input {
+  width: 90%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  border: #CCC 1px solid;
+  padding: 10px;
+  margin-top: 70px;
 }
